@@ -5,6 +5,7 @@
 === 0.5.9 ===
 - Several fixes for resource compressor.
 - Removed fdatasync() call for io::NativeFile::flush method.
+- Added system::get_current_dir() function.
 
 === 0.5.8 ===
 * Added support of DOM parsing and serializing for JSON files.
